Fixed flickering caused by menu-right icon. Expanded tooltip's width.

--- a/packages/ketchup/src/components/kup-tree/kup-tree.scss
+++ b/packages/ketchup/src/components/kup-tree/kup-tree.scss
@@ -129,10 +129,11 @@
       .icon-container.kup-tree__node__expander {
         background-color: var(--kup-text-color);
         mask: var(--menu-right-svg);
+        transform: rotate(90deg);
       }
 
       &[data-is-expanded] .expand-icon {
-        transform: rotate(90deg);
+        transform: rotate(180deg);
       }
 
       &--selected:not(.kup-tree__node--disabled),
